Fix issue 04287: Long question text overlaps itself when editing question Dev Changed the "height" style of the menubar-title elements to "min-height" - allows the element to flow to the size of its contents
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8616 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -135,8 +135,7 @@ div.menubar {
     border-style: solid;
     border-width: 1px;
     padding:0 0.2%;
-    height:14px;
-
+    min-height:14px;
 }
 
 .menubar-title img {
